hphp/hack/test/typecheck/coeffects/default_consistent_construct.php.exp
File "default_consistent_construct.php", line 7, characters 19-29:
The method `__construct` is not compatible with the overridden method (Typing[4341])
  File "default_consistent_construct.php", line 7, characters 19-29:
  Method `__construct` has type `(function()[HH\Contexts\write_props]: void)` in `C`
  File "default_consistent_construct.php", line 4, characters 11-11:
  But is has type `(function()[]: void)` in parent `I`
  File "default_consistent_construct.php", line 7, characters 19-29:
  Type `(function()[HH\Contexts\write_props]: void)` is not a subtype of `(function()[]: void)`
  File "default_consistent_construct.php", line 4, characters 11-11:
  Expected a function that requires the capability set {}
  File "default_consistent_construct.php", line 7, characters 33-43:
  But got a function that requires the capability WriteProperty
