hphp/hack/test/typecheck/coeffects/default_consistent_construct.php
<?hh

<<__ConsistentConstruct>>
interface I {}

class C implements I {
  public function __construct()[write_props] {}
}
